fixing docker
