# docs/swagger.json
@@ -1,10 +1,14 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "Сервис информации о тренировках и упражнения",
+        "title": "Enduran User Info API",
+        "contact": {},
+        "version": "1.0"
     },
+    "basePath": "/api/v1",
     "paths": {
-        "/api/v1/exercises": {
+        "/exercises": {
             "get": {
                 "description": "Возвращает список всех упражнений",
                 "produces": [
@@ -33,7 +37,7 @@
                 }
             }
         },
-        "/api/v1/exercises/by-tags": {
+        "/exercises/by-tags": {
             "post": {
                 "description": "Возвращает список упражнений, связанных со всеми указанными тегами",
                 "consumes": [
@@ -82,7 +86,7 @@
                 }
             }
         },
-        "/api/v1/exercises/search": {
+        "/exercises/search": {
             "get": {
                 "description": "Возвращает список упражнений, соответствующих поисковому запросу и фильтрам",
                 "produces": [
@@ -145,7 +149,7 @@
                 }
             }
         },
-        "/api/v1/exercises/tag/{tag_id}": {
+        "/exercises/tag/{tag_id}": {
             "get": {
                 "description": "Возвращает список упражнений, связанных с указанным тегом",
                 "produces": [
@@ -190,7 +194,7 @@
                 }
             }
         },
-        "/api/v1/exercises/{exercise_id}/tags": {
+        "/exercises/{exercise_id}/tags": {
             "get": {
                 "description": "Возвращает список тегов, связанных с указанным упражнением",
                 "produces": [
@@ -235,7 +239,7 @@
                 }
             }
         },
-        "/api/v1/exercises/{id}": {
+        "/exercises/{id}": {
             "get": {
                 "description": "Возвращает информацию об упражнении по его ID",
                 "produces": [
@@ -283,7 +287,7 @@
                 }
             }
         },
-        "/api/v1/tags": {
+        "/tags": {
             "get": {
                 "description": "Возвращает список всех тегов",
                 "produces": [
@@ -312,7 +316,7 @@
                 }
             }
         },
-        "/api/v1/tags/popular": {
+        "/tags/popular": {
             "get": {
                 "description": "Возвращает список самых популярных тегов",
                 "produces": [
@@ -358,7 +362,7 @@
                 }
             }
         },
-        "/api/v1/tags/{id}": {
+        "/tags/{id}": {
             "get": {
                 "description": "Возвращает информацию о теге по его ID",
                 "produces": [
@@ -406,7 +410,7 @@
                 }
             }
         },
-        "/api/v1/training-exercises": {
+        "/training-exercises": {
             "post": {
                 "description": "Добавляет упражнение к существующей тренировке",
                 "consumes": [
@@ -509,7 +513,7 @@
                 }
             }
         },
-        "/api/v1/training-exercises/{id}": {
+        "/training-exercises/{id}": {
             "put": {
                 "description": "Обновляет информацию о выполненном упражнении в тренировке",
                 "consumes": [
@@ -569,7 +573,7 @@
                 }
             }
         },
-        "/api/v1/trainings": {
+        "/trainings": {
             "get": {
                 "description": "Возвращает все тренировки указанного пользователя",
                 "produces": [
@@ -663,7 +667,7 @@
                 }
             }
         },
-        "/api/v1/trainings/stats": {
+        "/trainings/stats": {
             "get": {
                 "description": "Возвращает статистику тренировок пользователя",
                 "produces": [
@@ -710,7 +714,7 @@
                 }
             }
         },
-        "/api/v1/trainings/{id}": {
+        "/trainings/{id}": {
             "get": {
                 "description": "Возвращает информацию о тренировке со списком упражнений",
                 "produces": [
@@ -859,7 +863,7 @@
                 }
             }
         },
-        "/api/v1/trainings/{id}/complete": {
+        "/trainings/{id}/complete": {
             "patch": {
                 "description": "Отмечает тренировку как завершенную и устанавливает рейтинг",
                 "consumes": [
